--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,10 +6,24 @@ h1{
 }
 body{
   background-color: black;
+  text-align:center;
 }
 
 .link{
   color: Aquamarine;
   font-size: 16px;
+  font-family: Verdana;
   text-align:center;
+}
+
+h2{
+  font-family: Verdana;
+  font-weight:300;
+  font-size:42px;
+}
+
+.gray{
+  color:gray;
+  font-size:21px;
+  font-family:Verdana;
 }
