--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,7 @@ h1{
 body{
   background-color: black;
   text-align:center;
+  font-family: Verdana;
 }
 
 .link{
@@ -20,10 +21,16 @@ h2{
   font-family: Verdana;
   font-weight:300;
   font-size:42px;
+  color: white;
 }
 
 .gray{
   color:gray;
   font-size:21px;
   font-family:Verdana;
+}
+
+#copyright{
+  text-align:right;
+  color:gray;
 }
